# GKD-Software-2025-Test

./: CMakeLists.txt
code/part1/scr/: Model.cpp
code/part5/: Server.cpp
code/part6/: normal.cpp
